codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: tui2/src/history_cell.rs
expression: rendered
---
•Calling search.find_docs({"query":"ratatui styling","limit":3})
