codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui2/src/history_cell.rs
expression: rendered
---
● Explored
  └ Read auth.rs, shimmer.rs
