codex-rs/tui2/src/snapshots/codex_tui2__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui2/src/history_cell.rs
assertion_line: 2026
expression: rendered
---
● Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
